# demo-voice-assistant-v2

./: .claude_guidelines.md  .env.example  .gitignore  Option2_data_file_v2.txt  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
backend/: Makefile  setup_env.sh
backend/.claude/: settings.local.json
backend/app/: __init__.py  config.py  constants.py  main.py
backend/app/api/: dependencies.py  routes.py  websocket.py
backend/app/dashboard/: __init__.py  schemas.py  server.py  service.py  template.py
backend/app/models/: database.py  domain.py  schemas.py
backend/app/repositories/: conversation_repository.py
backend/app/services/: acw_service.py  cache.py  conversation_manager.py  data_export_service.py  event_bus.py  factory.py  listening_mode_manager.py  mcp_client.py  mcp_orchestrator.py  mcp_token_manager.py  model_manager.py  opportunity_detector.py  spacy_semantic_checker.py  word_streamer.py  (+5 more)
backend/tests/: conftest.py
code_examples/: ACW_RIGHT_PANEL_REPLACEMENT_GUIDE.md  MCP_CLIENT_IMPLEMENTATION_GUIDE.md  acw-summary-panel.jsx
frontend/: README.md  next.config.js  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
project_research/: ACW-AI-Summarization-Verified-Sources.md  agent-workflow-ui-research.md  industry_examples.md  industry_standard_ui_migration.md  screen_layout_patterns_for call_and_post_call.md  summary-formatting-implementation-guide.md
project_research/architectural_decision/: ARCHITECTURAL_DECISIONS.md  LISTENING_MODE_IMPLEMENTATION.md  UTTERANCE_BOUNDARY_IMPLEMENTATION_SUMMARY.md
(+70 files in other folders)
